# B-PLIS-rag

./: .gitignore  CHANGELOG.md  CODE_STRUCTURE.md  LICENSE  PROJECT_OVERVIEW.md  README.md  STEERING_GUIDE.md  benchmark_steering.py  bplis-basics-v15-3.ipynb  bplis_basics_v1.ipynb  bplis_basics_v2.ipynb  bplis_basics_v6.ipynb  context_focus_implementation.ipynb  demo.txt  layer_sweep_cache.pt  main.py  pyproject.toml  reft_t5_base_implementation.ipynb  requirements.txt  run_tests.py  setup.py
Notebooks/: Pyreft_tinyllama1_1B.ipynb  README.md  bplis_basics.ipynb  bplis_basics_v2.ipynb  bplis_basics_v6.ipynb
checkpoints/: reft_flant5_full.json
credentials/: example.toml
examples/: README.md  dynamic_steering_example.py  test_contradictory_context.py
notebooks/: experiment.ipynb
scripts/: compute_steering.py  demo_budgeted_search.py  eval_confiaq.py  evaluate.py  generate_benchmark.py  lint.sh  train_reft.py
src/: __init__.py  activation_steering.py  config.py  data_handler.py  evaluator.py  model_loader.py  rag_pipeline.py  reft.py  retriever.py  utils.py
src/contextfocus/: utils.py
src/contextfocus/data/: confiaq.py  link to data.txt  nqswap.py
src/contextfocus/eval/: evaluator.py  metrics.py
src/contextfocus/inference/: budgeted_search.py  conflict_detector.py
src/contextfocus/prompting/: templates.py
src/contextfocus/reft/: pyreft_adapter.py
src/contextfocus/steering/: bplis.py  discriminative.py  dynamic_selector.py  householder.py  layer_selector.py  steerer.py  vector_builder.py
tests/: README_TESTING.md  __init__.py  conftest.py  test_bplis.py  test_config.py  test_discriminative.py  test_dynamic_steering.py  test_householder.py  test_pipeline.py  test_reft.py  test_retriever.py  test_steering.py  test_utils.py
